[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/test/worldv3.tres" type="MeshLibrary" id=1]
[ext_resource path="res://src/element/testcandle.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/element/candle.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/element/collectible.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/element/bumper.gd" type="Script" id=5]
[ext_resource path="res://src/element/road-ring.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/element/boost-ring.tscn" type="PackedScene" id=7]

[sub_resource type="SphereShape3D" id=1]
radius = 4.0

[sub_resource type="SphereMesh" id=2]
radius = 4.0
height = 8.0
radial_segments = 8
rings = 4

[sub_resource type="SphereShape3D" id=3]
radius = 4.6

[node name="Node3D" type="Node3D"]

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource( 1 )
cell_size = Vector3( 10, 10, 10 )
data = {
"cells": PackedInt32Array( 0, 0, 1, 1, 0, 1, 2, 0, 1, 3, 0, 1, 4, 0, 1, 5, 0, 1, 6, 0, 1, 7, 0, 0, 65527, 0, 0, 65528, 0, 0, 65529, 0, 0, 65530, 0, 2, 65531, 0, 1, 65532, 0, 1, 65533, 0, 1, 65534, 0, 1, 65535, 0, 1, 65543, 0, 0, 131063, 0, 0, 131064, 0, 0, 131065, 0, 2, 131079, 0, 0, 196592, 0, 0, 196593, 0, 0, 196594, 0, 0, 196595, 0, 0, 196596, 0, 0, 196597, 0, 0, 196598, 0, 0, 196599, 0, 0, 196600, 0, 2, 458743, 0, 0, 0, 1, 1, 1, 1, 1, 2, 1, 1, 3, 1, 1, 4, 1, 1, 5, 1, 1, 6, 1, 1, 7, 1, 0, 65527, 1, 0, 65528, 1, 0, 65529, 1, 0, 65530, 1, 2, 65531, 1, 1, 65532, 1, 1, 65533, 1, 1, 65534, 1, 1, 65535, 1, 1, 65543, 1, 0, 131063, 1, 0, 131064, 1, 0, 131065, 1, 2, 131079, 1, 0, 196592, 1, 0, 196593, 1, 0, 196594, 1, 0, 196595, 1, 0, 196596, 1, 0, 196597, 1, 0, 196598, 1, 0, 196599, 1, 0, 196600, 1, 2, 458743, 1, 0, 0, 2, 1, 1, 2, 1, 2, 2, 1, 3, 2, 1, 4, 2, 1, 5, 2, 1, 6, 2, 1, 7, 2, 0, 65527, 2, 0, 65528, 2, 1, 65529, 2, 1, 65530, 2, 1, 65531, 2, 1, 65532, 2, 1, 65533, 2, 1, 65534, 2, 1, 65535, 2, 1, 65543, 2, 0, 131063, 2, 0, 131079, 2, 0, 196592, 2, 0, 196593, 2, 0, 196594, 2, 0, 196595, 2, 0, 196596, 2, 0, 196597, 2, 0, 196598, 2, 0, 196599, 2, 0, 262133, 2, 0, 262134, 2, 0, 262135, 2, 0, 327669, 2, 0, 327670, 2, 0, 327671, 2, 0, 393205, 2, 0, 393206, 2, 0, 393207, 2, 0, 458743, 2, 0, 0, 3, 1, 1, 3, 1, 2, 3, 1, 3, 3, 1, 4, 3, 1, 5, 3, 1, 6, 3, 1, 7, 3, 0, 65527, 3, 0, 65528, 3, 1, 65529, 3, 1, 65530, 3, 1, 65531, 3, 1, 65532, 3, 1, 65533, 3, 1, 65534, 3, 1, 65535, 3, 1, 65543, 3, 0, 65544, 3, 0, 131063, 3, 0, 131079, 3, 0, 196592, 3, 0, 196593, 3, 0, 196594, 3, 0, 196595, 3, 0, 196596, 3, 0, 196597, 3, 0, 196598, 3, 0, 196599, 3, 0, 262133, 3, 0, 327669, 3, 0, 393205, 3, 0, 0, 4, 1, 1, 4, 1, 2, 4, 1, 3, 4, 1, 4, 4, 1, 5, 4, 1, 6, 4, 1, 7, 4, 0, 65526, 4, 0, 65527, 4, 0, 65528, 4, 1, 65529, 4, 1, 65530, 4, 1, 65531, 4, 1, 65532, 4, 1, 65533, 4, 1, 65534, 4, 1, 65535, 4, 1, 65543, 4, 0, 65544, 4, 0, 131063, 4, 0, 131079, 4, 0, 196592, 4, 0, 196593, 4, 0, 196594, 4, 0, 196595, 4, 0, 196596, 4, 0, 196597, 4, 0, 196598, 4, 0, 196599, 4, 0, 262133, 4, 0, 327669, 4, 0, 393205, 4, 0, 0, 5, 1, 1, 5, 1, 2, 5, 1, 3, 5, 1, 4, 5, 1, 5, 5, 1, 6, 5, 1, 7, 5, 0, 65526, 5, 0, 65527, 5, 0, 65528, 5, 1, 65529, 5, 1, 65530, 5, 1, 65531, 5, 1, 65532, 5, 1, 65533, 5, 1, 65534, 5, 1, 65535, 5, 1, 65543, 5, 0, 65544, 5, 0, 131063, 5, 0, 131079, 5, 0, 196592, 5, 0, 196593, 5, 0, 196594, 5, 0, 196595, 5, 0, 196596, 5, 0, 196597, 5, 0, 196598, 5, 0, 196599, 5, 0, 0, 6, 1, 1, 6, 1, 2, 6, 1, 3, 6, 1, 4, 6, 1, 5, 6, 1, 6, 6, 1, 7, 6, 0, 65526, 6, 0, 65527, 6, 0, 65528, 6, 1, 65529, 6, 1, 65530, 6, 1, 65531, 6, 1, 65532, 6, 1, 65533, 6, 1, 65534, 6, 1, 65535, 6, 1, 65543, 6, 0, 65544, 6, 0, 131063, 6, 0, 131079, 6, 0, 196592, 6, 0, 196593, 6, 0, 196594, 6, 0, 196595, 6, 0, 196596, 6, 0, 196597, 6, 0, 196598, 6, 0, 196599, 6, 0, 0, 7, 1, 1, 7, 1, 2, 7, 1, 3, 7, 1, 4, 7, 1, 5, 7, 1, 6, 7, 1, 7, 7, 0, 65526, 7, 0, 65527, 7, 0, 65528, 7, 1, 65529, 7, 1, 65530, 7, 1, 65531, 7, 1, 65532, 7, 1, 65533, 7, 1, 65534, 7, 1, 65535, 7, 1, 65543, 7, 0, 65544, 7, 0, 131063, 7, 0, 131079, 7, 0, 196598, 7, 0, 196599, 7, 0, 0, 8, 1, 1, 8, 1, 2, 8, 1, 3, 8, 1, 4, 8, 1, 5, 8, 1, 6, 8, 1, 7, 8, 0, 65526, 8, 0, 65527, 8, 0, 65528, 8, 1, 65529, 8, 1, 65530, 8, 1, 65531, 8, 1, 65532, 8, 1, 65533, 8, 1, 65534, 8, 1, 65535, 8, 1, 65543, 8, 0, 65544, 8, 0, 131063, 8, 0, 131079, 8, 0, 196597, 8, 0, 196598, 8, 0, 196599, 8, 0, 0, 9, 1, 1, 9, 3, 2, 9, 3, 3, 9, 3, 4, 9, 3, 5, 9, 3, 6, 9, 4, 7, 9, 0, 65527, 9, 0, 65528, 9, 3, 65529, 9, 3, 65530, 9, 3, 65531, 9, 3, 65532, 9, 3, 65533, 9, 3, 65534, 9, 3, 65535, 9, 3, 65543, 9, 0, 65544, 9, 0, 131063, 9, 0, 131079, 9, 0, 196599, 9, 0, 0, 10, 0, 1, 10, 0, 2, 10, 0, 3, 10, 0, 4, 10, 0, 5, 10, 0, 6, 10, 0, 7, 10, 0, 65527, 10, 0, 65528, 10, 0, 65529, 10, 0, 65530, 10, 0, 65531, 10, 0, 65532, 10, 0, 65533, 10, 0, 65534, 10, 0, 65535, 10, 0, 65536, 10, 0, 65537, 10, 0, 65538, 10, 0, 65539, 10, 0, 65540, 10, 0, 65541, 10, 0, 65542, 10, 0, 65543, 10, 0, 131063, 10, 0, 131064, 10, 0, 131065, 10, 0, 131066, 10, 0, 131067, 10, 0, 131068, 10, 0, 131069, 10, 0, 131070, 10, 0, 131071, 10, 0, 131072, 10, 0, 131073, 10, 0, 131074, 10, 0, 131075, 10, 0, 131076, 10, 0, 131077, 10, 0, 131078, 10, 0, 131079, 10, 0, 196599, 10, 0, 196600, 10, 0, 196601, 10, 0, 196602, 10, 0, 196603, 10, 0, 196604, 10, 0, 196605, 10, 0, 196606, 10, 0, 196607, 10, 0, 0, 11, 0, 1, 11, 0, 2, 11, 0, 3, 11, 0, 4, 11, 0, 5, 11, 0, 6, 11, 0, 7, 11, 0, 65527, 11, 0, 65528, 11, 0, 65529, 11, 0, 65530, 11, 0, 65531, 11, 0, 65532, 11, 0, 65533, 11, 0, 65534, 11, 0, 65535, 11, 0, 65536, 11, 0, 65537, 11, 0, 65538, 11, 0, 65539, 11, 0, 65540, 11, 0, 65541, 11, 0, 131063, 11, 0, 131064, 11, 0, 131065, 11, 0, 131066, 11, 0, 131067, 11, 0, 131068, 11, 0, 131069, 11, 0, 131070, 11, 0, 131071, 11, 0, 196599, 11, 0, 196600, 11, 0, 0, 12, 0, 1, 12, 0, 2, 12, 0, 3, 12, 0, 4, 12, 0, 5, 12, 0, 6, 12, 0, 7, 12, 0, 65527, 12, 0, 65528, 12, 0, 65529, 12, 0, 65530, 12, 0, 65531, 12, 0, 65532, 12, 0, 65533, 12, 0, 65534, 12, 0, 65535, 12, 0, 131063, 12, 0, 65527, 13, 0, 6, 65520, 0, 131073, 65520, 0, 131074, 65520, 0, 131075, 65520, 0, 196604, 65520, 0, 196605, 65520, 0, 196606, 65520, 0, 0, 65521, 0, 1, 65521, 0, 2, 65521, 0, 3, 65521, 0, 4, 65521, 0, 5, 65521, 0, 6, 65521, 0, 7, 65521, 0, 65527, 65521, 0, 65528, 65521, 0, 65529, 65521, 0, 65530, 65521, 0, 65531, 65521, 0, 65532, 65521, 0, 65533, 65521, 0, 65534, 65521, 0, 65535, 65521, 0, 65536, 65521, 0, 65537, 65521, 0, 65538, 65521, 0, 65539, 65521, 0, 65540, 65521, 0, 65541, 65521, 0, 65542, 65521, 0, 65543, 65521, 0, 131063, 65521, 0, 131064, 65521, 0, 131065, 65521, 0, 131066, 65521, 0, 131067, 65521, 0, 131068, 65521, 0, 131069, 65521, 0, 131070, 65521, 0, 131071, 65521, 0, 131072, 65521, 0, 131073, 65521, 0, 131074, 65521, 0, 131075, 65521, 0, 131076, 65521, 0, 131077, 65521, 0, 131078, 65521, 0, 131079, 65521, 0, 196599, 65521, 0, 196600, 65521, 0, 196601, 65521, 0, 196602, 65521, 0, 196603, 65521, 0, 196604, 65521, 0, 196605, 65521, 0, 196606, 65521, 0, 196607, 65521, 0, 0, 65522, 0, 1, 65522, 0, 2, 65522, 0, 3, 65522, 2, 4, 65522, 1, 5, 65522, 1, 6, 65522, 1, 7, 65522, 0, 65527, 65522, 0, 65528, 65522, 1, 65529, 65522, 1, 65530, 65522, 1, 65531, 65522, 1, 65532, 65522, 1, 65533, 65522, 1, 65534, 65522, 655362, 65535, 65522, 0, 65543, 65522, 0, 65544, 65522, 0, 131062, 65522, 0, 131063, 65522, 0, 131079, 65522, 0, 196599, 65522, 0, 0, 65523, 0, 1, 65523, 0, 2, 65523, 0, 3, 65523, 2, 4, 65523, 1, 5, 65523, 1, 6, 65523, 1, 7, 65523, 0, 65527, 65523, 0, 65528, 65523, 1, 65529, 65523, 1, 65530, 65523, 1, 65531, 65523, 1, 65532, 65523, 1, 65533, 65523, 1, 65534, 65523, 655362, 65535, 65523, 0, 65543, 65523, 0, 65544, 65523, 0, 131062, 65523, 0, 131063, 65523, 0, 131079, 65523, 0, 196598, 65523, 0, 196599, 65523, 0, 0, 65524, 0, 1, 65524, 0, 2, 65524, 0, 3, 65524, 2, 4, 65524, 1, 5, 65524, 1, 6, 65524, 1, 7, 65524, 0, 65527, 65524, 0, 65528, 65524, 1, 65529, 65524, 1, 65530, 65524, 1, 65531, 65524, 1, 65532, 65524, 1, 65533, 65524, 1, 65534, 65524, 655362, 65535, 65524, 0, 65543, 65524, 0, 131063, 65524, 0, 131079, 65524, 0, 196598, 65524, 0, 196599, 65524, 0, 0, 65525, 0, 1, 65525, 0, 2, 65525, 0, 3, 65525, 2, 4, 65525, 1, 5, 65525, 1, 6, 65525, 1, 7, 65525, 0, 65527, 65525, 0, 65528, 65525, 1, 65529, 65525, 1, 65530, 65525, 1, 65531, 65525, 1, 65532, 65525, 1, 65533, 65525, 1, 65534, 65525, 655362, 65535, 65525, 0, 65543, 65525, 0, 131063, 65525, 0, 131079, 65525, 0, 196598, 65525, 0, 196599, 65525, 0, 0, 65526, 0, 1, 65526, 0, 2, 65526, 0, 3, 65526, 2, 4, 65526, 1, 5, 65526, 1, 6, 65526, 1, 7, 65526, 0, 65527, 65526, 0, 65528, 65526, 1, 65529, 65526, 1, 65530, 65526, 1, 65531, 65526, 1, 65532, 65526, 1, 65533, 65526, 1, 65534, 65526, 655362, 65535, 65526, 0, 65543, 65526, 0, 131063, 65526, 0, 131079, 65526, 0, 196598, 65526, 0, 196599, 65526, 0, 0, 65527, 1441794, 1, 65527, 1441794, 2, 65527, 1441794, 3, 65527, 1, 4, 65527, 1, 5, 65527, 1, 6, 65527, 1, 7, 65527, 0, 65527, 65527, 0, 65528, 65527, 1, 65529, 65527, 1, 65530, 65527, 1, 65531, 65527, 1, 65532, 65527, 1, 65533, 65527, 1, 65534, 65527, 1, 65535, 65527, 1441794, 65543, 65527, 0, 131063, 65527, 0, 131079, 65527, 0, 196592, 65527, 0, 196593, 65527, 0, 196594, 65527, 0, 196595, 65527, 0, 196596, 65527, 0, 196597, 65527, 0, 196598, 65527, 0, 196599, 65527, 0, 262133, 65527, 0, 327669, 65527, 0, 393205, 65527, 0, 0, 65528, 1, 1, 65528, 1, 2, 65528, 1, 3, 65528, 1, 4, 65528, 1, 5, 65528, 1, 6, 65528, 1, 7, 65528, 0, 65527, 65528, 0, 65528, 65528, 1, 65529, 65528, 1, 65530, 65528, 1, 65531, 65528, 1, 65532, 65528, 1, 65533, 65528, 1, 65534, 65528, 1, 65535, 65528, 1, 65543, 65528, 0, 131063, 65528, 0, 131079, 65528, 0, 196592, 65528, 0, 196593, 65528, 0, 196594, 65528, 0, 196595, 65528, 0, 196596, 65528, 0, 196597, 65528, 0, 196598, 65528, 0, 196599, 65528, 0, 262133, 65528, 0, 327669, 65528, 0, 393205, 65528, 0, 0, 65529, 1, 1, 65529, 1, 2, 65529, 1, 3, 65529, 1, 4, 65529, 1, 5, 65529, 1, 6, 65529, 1, 7, 65529, 0, 65527, 65529, 0, 65528, 65529, 1, 65529, 65529, 1, 65530, 65529, 1, 65531, 65529, 1, 65532, 65529, 1, 65533, 65529, 1, 65534, 65529, 1, 65535, 65529, 1, 65543, 65529, 0, 131063, 65529, 0, 131079, 65529, 0, 196592, 65529, 0, 196593, 65529, 0, 196594, 65529, 0, 196595, 65529, 0, 196596, 65529, 0, 196597, 65529, 0, 196598, 65529, 0, 196599, 65529, 0, 262133, 65529, 0, 327669, 65529, 0, 393205, 65529, 0, 0, 65530, 1, 1, 65530, 1, 2, 65530, 1, 3, 65530, 1, 4, 65530, 1, 5, 65530, 1, 6, 65530, 1, 7, 65530, 0, 65527, 65530, 0, 65528, 65530, 1, 65529, 65530, 1, 65530, 65530, 1, 65531, 65530, 1, 65532, 65530, 1, 65533, 65530, 1, 65534, 65530, 1, 65535, 65530, 1, 65543, 65530, 0, 131063, 65530, 0, 131079, 65530, 0, 196592, 65530, 0, 196593, 65530, 0, 196594, 65530, 0, 196595, 65530, 0, 196596, 65530, 0, 196597, 65530, 0, 196598, 65530, 0, 196599, 65530, 0, 262133, 65530, 0, 327669, 65530, 0, 393205, 65530, 0, 0, 65531, 1, 1, 65531, 1, 2, 65531, 1, 3, 65531, 1, 4, 65531, 1, 5, 65531, 1, 6, 65531, 1, 7, 65531, 0, 65527, 65531, 0, 65528, 65531, 1, 65529, 65531, 1, 65530, 65531, 1, 65531, 65531, 1, 65532, 65531, 1, 65533, 65531, 1, 65534, 65531, 1, 65535, 65531, 1, 65543, 65531, 0, 131063, 65531, 0, 131079, 65531, 0, 196592, 65531, 0, 196593, 65531, 0, 196594, 65531, 0, 196595, 65531, 0, 196596, 65531, 0, 196597, 65531, 0, 196598, 65531, 0, 196599, 65531, 0, 262133, 65531, 0, 327669, 65531, 0, 393205, 65531, 0, 0, 65532, 1, 1, 65532, 1, 2, 65532, 1, 3, 65532, 1, 4, 65532, 1, 5, 65532, 1, 6, 65532, 1, 7, 65532, 0, 65527, 65532, 0, 65528, 65532, 1, 65529, 65532, 1, 65530, 65532, 1, 65531, 65532, 1, 65532, 65532, 1, 65533, 65532, 1, 65534, 65532, 1, 65535, 65532, 1, 65543, 65532, 0, 131063, 65532, 0, 131079, 65532, 0, 196592, 65532, 0, 196593, 65532, 0, 196594, 65532, 0, 196595, 65532, 0, 196596, 65532, 0, 196597, 65532, 0, 196598, 65532, 0, 196599, 65532, 0, 262133, 65532, 0, 327669, 65532, 0, 393205, 65532, 0, 0, 65533, 1, 1, 65533, 1, 2, 65533, 1, 3, 65533, 1, 4, 65533, 1, 5, 65533, 1, 6, 65533, 1, 7, 65533, 0, 65527, 65533, 0, 65528, 65533, 1, 65529, 65533, 1, 65530, 65533, 1, 65531, 65533, 1, 65532, 65533, 1, 65533, 65533, 1, 65534, 65533, 1, 65535, 65533, 1, 65543, 65533, 0, 131063, 65533, 0, 131079, 65533, 0, 196592, 65533, 0, 196593, 65533, 0, 196594, 65533, 0, 196595, 65533, 0, 196596, 65533, 0, 196597, 65533, 0, 196598, 65533, 0, 196599, 65533, 0, 262133, 65533, 0, 262134, 65533, 0, 262135, 65533, 0, 327669, 65533, 0, 327670, 65533, 0, 327671, 65533, 0, 393205, 65533, 0, 393206, 65533, 0, 393207, 65533, 0, 458743, 65533, 0, 0, 65534, 1, 1, 65534, 1, 2, 65534, 1, 3, 65534, 1, 4, 65534, 1, 5, 65534, 1, 6, 65534, 1, 7, 65534, 0, 65527, 65534, 0, 65528, 65534, 0, 65529, 65534, 0, 65530, 65534, 2, 65531, 65534, 1, 65532, 65534, 1, 65533, 65534, 1, 65534, 65534, 1, 65535, 65534, 1, 65543, 65534, 0, 131063, 65534, 0, 131064, 65534, 0, 131065, 65534, 2, 131079, 65534, 0, 196592, 65534, 0, 196593, 65534, 0, 196594, 65534, 0, 196595, 65534, 0, 196596, 65534, 0, 196597, 65534, 0, 196598, 65534, 0, 196599, 65534, 0, 196600, 65534, 2, 458743, 65534, 0, 0, 65535, 1, 1, 65535, 1, 2, 65535, 1, 3, 65535, 1, 4, 65535, 1, 5, 65535, 1, 6, 65535, 1, 7, 65535, 0, 65527, 65535, 0, 65528, 65535, 0, 65529, 65535, 0, 65530, 65535, 2, 65531, 65535, 1, 65532, 65535, 1, 65533, 65535, 1, 65534, 65535, 1, 65535, 65535, 1, 65543, 65535, 0, 131063, 65535, 0, 131065, 65535, 2, 131079, 65535, 0, 196592, 65535, 0, 196593, 65535, 0, 196594, 65535, 0, 196595, 65535, 0, 196596, 65535, 0, 196597, 65535, 0, 196598, 65535, 0, 196599, 65535, 0, 196600, 65535, 2, 458743, 65535, 0 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 2, 0 )
}

[node name="candle" parent="." instance=ExtResource( 3 )]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 18.0088, 6.40021, -16.2399 )

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 24.8135, 14.9475, 10.8509 )

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, -0.804956, 0.593334, 0, -0.593334, -0.804956, 0, 15.0619, 0 )
light_color = Color( 0.552941, 0.231373, 0.231373, 1 )
light_energy = 0.75
light_indirect_energy = 0.0
light_negative = true

[node name="proto" parent="." instance=ExtResource( 2 )]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 20, 0 )

[node name="SpotLight3D" parent="proto" index="6"]
light_color = Color( 1, 0.988235, 0.933333, 1 )
light_energy = 4.0
spot_range = 16.7099

[node name="Camera3D" parent="proto" index="7"]
current = true

[node name="Node3D" type="Node3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, -29.1, 8.7, 16.8 )

[node name="Node3D" parent="Node3D" instance=ExtResource( 4 )]

[node name="Spatial2" parent="Node3D" instance=ExtResource( 4 )]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 0 )

[node name="Spatial3" parent="Node3D" instance=ExtResource( 4 )]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10 )

[node name="Spatial4" parent="Node3D" instance=ExtResource( 4 )]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 10 )

[node name="Spatial3" type="Node3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 30, 10, 30 )

[node name="Node3D" parent="Spatial3" instance=ExtResource( 4 )]

[node name="Spatial2" parent="Spatial3" instance=ExtResource( 4 )]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 0 )

[node name="Spatial3" parent="Spatial3" instance=ExtResource( 4 )]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10 )

[node name="Spatial4" parent="Spatial3" instance=ExtResource( 4 )]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 10 )

[node name="Spatial4" type="Node3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 30, 20, 30 )

[node name="Node3D" parent="Spatial4" instance=ExtResource( 4 )]

[node name="Spatial2" parent="Spatial4" instance=ExtResource( 4 )]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 0 )

[node name="Spatial3" parent="Spatial4" instance=ExtResource( 4 )]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10 )

[node name="Spatial4" parent="Spatial4" instance=ExtResource( 4 )]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 10 )

[node name="Spatial2" type="Node3D" parent="."]

[node name="Node3D" parent="Spatial2" instance=ExtResource( 4 )]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, -20.2307, 10.3716, -5.85872 )

[node name="Spatial2" parent="Spatial2" instance=ExtResource( 4 )]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.16532, 10.3716, -5.85872 )

[node name="Spatial3" parent="Spatial2" instance=ExtResource( 4 )]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.73061, 10.3716, -5.85872 )

[node name="bumper" type="RigidBody3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, -50 )
mode = 1
gravity_scale = 0.0
axis_lock_linear_x = true
axis_lock_linear_y = true
axis_lock_linear_z = true
script = ExtResource( 5 )

[node name="CollisionShape3D" type="CollisionShape3D" parent="bumper"]
shape = SubResource( 1 )

[node name="CSGMesh3D" type="CSGMesh3D" parent="bumper"]
mesh = SubResource( 2 )

[node name="Area3D" type="Area3D" parent="bumper"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="bumper/Area3D"]
shape = SubResource( 3 )

[node name="road-ring" parent="." instance=ExtResource( 6 )]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.56409, 9.35545, 11.2511 )

[node name="road-ring2" parent="." instance=ExtResource( 6 )]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.56409, 9.35545, 11.2511 )

[node name="boost-ring" parent="." instance=ExtResource( 7 )]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.85415, 9.56889, 27.8719 )

[connection signal="body_entered" from="bumper" to="bumper" method="_on_bumper_body_entered"]
[connection signal="body_shape_entered" from="bumper" to="bumper" method="_on_bumper_body_shape_entered"]
[connection signal="body_entered" from="bumper/Area3D" to="bumper" method="_on_Area_body_entered"]

[editable path="proto"]
